--- a/ui/web_ui/users.html
+++ b/ui/web_ui/users.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>User Management</title>
-    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="css/ui_styles.css">
 </head>
 <body>
     <h1>User Management</h1>
@@ -12,8 +12,6 @@
         <label for="username">Username:</label>
         <input type="text" id="username" name="username" required>
         
-        <label for="email">Email:</label>
-        <input type="email" id="email" name="email" required>
         
         <button type="submit">Add User</button>
     </form>
@@ -24,7 +22,6 @@
             <tr>
                 <th>ID</th>
                 <th>Username</th>
-                <th>Email</th>
             </tr>
         </thead>
         <tbody>
