update user table

--- a/model_visualized.html
+++ b/model_visualized.html
@@ -1058,15 +1058,15 @@
                     <th>Type</th>
                 </tr>
             </thead>
-            <tbody>
+            <tbody>                
                 <tr>
                     <td><span class="field-name" data-bs-toggle="popover" title="user_name"
-                            data-bs-content="Unique username">user_name</span></td>
+                            data-bs-content="Unique username">username</span></td>
                     <td>String(50)</td>
                 </tr>
                 <tr>
-                    <td><span class="field-name" data-bs-toggle="popover" title="password"
-                            data-bs-content="User password">password</span></td>
+                    <td><span class="field-name" data-bs-toggle="popover" title="password_hash"
+                            data-bs-content="Hashed password">password_hash</span></td>
                     <td>String(255)</td>
                 </tr>
                 <tr>
@@ -1082,6 +1082,11 @@
                 <tr>
                     <td><span class="field-name" data-bs-toggle="popover" title="is_active"
                             data-bs-content="Active status">is_active</span></td>
+                    <td>Boolean</td>
+                </tr>
+                <tr>
+                    <td><span class="field-name" data-bs-toggle="popover" title="is_admin"
+                            data-bs-content="Admin status">is_admin</span></td>
                     <td>Boolean</td>
                 </tr>
             </tbody>
