--- a/model_visualized.html
+++ b/model_visualized.html
@@ -130,6 +130,11 @@
                     <td>String(100)</td>
                 </tr>
                 <tr>
+                    <td><span class="field-name" data-bs-toggle="popover" title="region"
+                            data-bs-content="Region name">region</span></td>
+                    <td>String(100)</td>
+                </tr>
+                <tr>
                     <td><span class="field-name" data-bs-toggle="popover" title="street"
                             data-bs-content="Street name">street</span></td>
                     <td>String(200)</td>
@@ -167,14 +172,19 @@
             </thead>
             <tbody>
                 <tr>
-                    <td><span class="field-name" data-bs-toggle="popover" title="name"
-                            data-bs-content="Company name">name</span></td>
-                    <td>String(100)</td>
+                    <td><span class="field-name" data-bs-toggle="popover" title="name_eng"
+                            data-bs-content="Required unique English name">name_eng</span></td>
+                    <td>String(255)</td>
                 </tr>
                 <tr>
-                    <td><span class="field-name" data-bs-toggle="popover" title="code"
-                            data-bs-content="Company code">code</span></td>
-                    <td>String(50)</td>
+                    <td><span class="field-name" data-bs-toggle="popover" title="name_chn"
+                            data-bs-content="Optional Chinese name">name_chn</span></td>
+                    <td>String(255)</td>
+                </tr>
+                <tr>
+                    <td><span class="field-name" data-bs-toggle="popover" title="name_chn_abbr"
+                            data-bs-content="Abbreviation of the company name">name_chn_abbr</span></td>
+                    <td>String(10)</td>
                 </tr>
                 <tr class="fk-highlight">
                     <td><span class="field-name" data-bs-toggle="popover" title="location_id"
@@ -198,21 +208,19 @@
             </thead>
             <tbody>
                 <tr>
-                    <td><span class="field-name" data-bs-toggle="popover" title="name"
-                            data-bs-content="BG name">name</span>
-                    </td>
-                    <td>String(100)</td>
-                </tr>
-                <tr>
-                    <td><span class="field-name" data-bs-toggle="popover" title="code"
-                            data-bs-content="BG code">code</span>
-                    </td>
+                    <td><span class="field-name" data-bs-toggle="popover" title="name_eng"
+                            data-bs-content="Required unique English name">name_eng</span></td>
                     <td>String(50)</td>
                 </tr>
-                <tr class="fk-highlight">
-                    <td><span class="field-name" data-bs-toggle="popover" title="company_id"
-                            data-bs-content="Foreign key to Company">company_id</span></td>
-                    <td>FK to Company</td>
+                <tr>
+                    <td><span class="field-name" data-bs-toggle="popover" title="name_chn"
+                            data-bs-content="Optional Chinese name">name_chn</span></td>
+                    <td>String(50)</td>
+                </tr>
+                <tr>
+                    <td><span class="field-name" data-bs-toggle="popover" title="name_chn_abbr"
+                            data-bs-content="Abbreviation of the BG name">name_chn_abbr</span></td>
+                    <td>String(10)</td>
                 </tr>
             </tbody>
         </table>
@@ -231,16 +239,19 @@
             </thead>
             <tbody>
                 <tr>
-                    <td><span class="field-name" data-bs-toggle="popover" title="name"
-                            data-bs-content="BU name">name</span>
-                    </td>
-                    <td>String(100)</td>
+                    <td><span class="field-name" data-bs-toggle="popover" title="name_eng"
+                            data-bs-content="Required unique English name">name_eng</span></td>
+                    <td>String(50)</td>
                 </tr>
                 <tr>
-                    <td><span class="field-name" data-bs-toggle="popover" title="code"
-                            data-bs-content="BU code">code</span>
-                    </td>
+                    <td><span class="field-name" data-bs-toggle="popover" title="name_chn"
+                            data-bs-content="Optional Chinese name">name_chn</span></td>
                     <td>String(50)</td>
+                </tr>
+                <tr>
+                    <td><span class="field-name" data-bs-toggle="popover" title="name_chn_abbr"
+                            data-bs-content="Abbreviation of the BU name">name_chn_abbr</span></td>
+                    <td>String(10)</td>
                 </tr>
                 <tr class="fk-highlight">
                     <td><span class="field-name" data-bs-toggle="popover" title="bg_id"
@@ -265,23 +276,18 @@
             <tbody>
                 <tr>
                     <td><span class="field-name" data-bs-toggle="popover" title="name_eng"
-                            data-bs-content="English name">name_eng</span></td>
+                            data-bs-content="Required unique English name">name_eng</span></td>
                     <td>String(50)</td>
                 </tr>
                 <tr>
                     <td><span class="field-name" data-bs-toggle="popover" title="name_chn"
-                            data-bs-content="Chinese name">name_chn</span></td>
+                            data-bs-content="Optional Chinese name">name_chn</span></td>
                     <td>String(50)</td>
                 </tr>
                 <tr class="fk-highlight">
                     <td><span class="field-name" data-bs-toggle="popover" title="company_id"
                             data-bs-content="Foreign key to Company">company_id</span></td>
                     <td>FK to Company</td>
-                </tr>
-                <tr class="fk-highlight">
-                    <td><span class="field-name" data-bs-toggle="popover" title="location_id"
-                            data-bs-content="Foreign key to Location">location_id</span></td>
-                    <td>FK to Location</td>
                 </tr>
             </tbody>
         </table>
@@ -1200,6 +1206,103 @@
                 </tr>
             </tbody>
         </table>
+
+        <!-- TopBarMenu Model -->
+        <table>
+            <thead>
+                <tr>
+                    <th colspan="2"
+                        style="text-align: center; background-color: #e9ecef; font-size: 1em; padding: 8px;">
+                        TopBarMenu Model</th>
+                </tr>
+                <tr>
+                    <th>Field Name</th>
+                    <th>Type</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td><span class="field-name" data-bs-toggle="popover" title="name"
+                            data-bs-content="Menu name">name</span></td>
+                    <td>String(255)</td>
+                </tr>
+                <tr>
+                    <td><span class="field-name" data-bs-toggle="popover" title="order"
+                            data-bs-content="Display order">order</span></td>
+                    <td>Integer</td>
+                </tr>
+            </tbody>
+        </table>
+
+        <!-- SideBarMenu Model -->
+        <table>
+            <thead>
+                <tr>
+                    <th colspan="2"
+                        style="text-align: center; background-color: #e9ecef; font-size: 1em; padding: 8px;">
+                        SideBarMenu Model</th>
+                </tr>
+                <tr>
+                    <th>Field Name</th>
+                    <th>Type</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td><span class="field-name" data-bs-toggle="popover" title="name"
+                            data-bs-content="Menu name">name</span></td>
+                    <td>String(255)</td>
+                </tr>
+                <tr>
+                    <td><span class="field-name" data-bs-toggle="popover" title="url"
+                            data-bs-content="Menu URL">url</span></td>
+                    <td>String(255)</td>
+                </tr>
+                <tr>
+                    <td><span class="field-name" data-bs-toggle="popover" title="order"
+                            data-bs-content="Display order">order</span></td>
+                    <td>Integer</td>
+                </tr>
+                <tr class="fk-highlight">
+                    <td><span class="field-name" data-bs-toggle="popover" title="top_bar_id"
+                            data-bs-content="Foreign key to TopBarMenu">top_bar_id</span></td>
+                    <td>FK to TopBarMenu</td>
+                </tr>
+                <tr class="fk-highlight">
+                    <td><span class="field-name" data-bs-toggle="popover" title="parent_id"
+                            data-bs-content="Foreign key to parent SideBarMenu">parent_id</span></td>
+                    <td>FK to SideBarMenu</td>
+                </tr>
+            </tbody>
+        </table>
+
+        <!-- MenuItemPermission Model -->
+        <table>
+            <thead>
+                <tr>
+                    <th colspan="2"
+                        style="text-align: center; background-color: #e9ecef; font-size: 1em; padding: 8px;">
+                        MenuItemPermission Model</th>
+                </tr>
+                <tr>
+                    <th>Field Name</th>
+                    <th>Type</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr class="fk-highlight">
+                    <td><span class="field-name" data-bs-toggle="popover" title="menu_id"
+                            data-bs-content="Foreign key to SideBarMenu">menu_id</span></td>
+                    <td>FK to SideBarMenu</td>
+                </tr>
+                <tr class="fk-highlight">
+                    <td><span class="field-name" data-bs-toggle="popover" title="permission_id"
+                            data-bs-content="Foreign key to Permission">permission_id</span></td>
+                    <td>FK to Permission</td>
+                </tr>
+            </tbody>
+        </table>
+
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <script>
