add some function

--- a/model_visualized.html
+++ b/model_visualized.html
@@ -1284,8 +1284,8 @@
                     <td>Integer</td>
                 </tr>
                 <tr class="fk-highlight">
-                    <td><span class="field-name" data-bs-toggle="popover" title="top_bar_id"
-                            data-bs-content="Foreign key to TopBarMenu">top_bar_id</span></td>
+                    <td><span class="field-name" data-bs-toggle="popover" title="top_bar_menu_id"
+                            data-bs-content="Foreign key to TopBarMenu">top_bar_menu_id</span></td>
                     <td>FK to TopBarMenu</td>
                 </tr>
                 <tr class="fk-highlight">
@@ -1311,8 +1311,8 @@
             </thead>
             <tbody>
                 <tr class="fk-highlight">
-                    <td><span class="field-name" data-bs-toggle="popover" title="menu_id"
-                            data-bs-content="Foreign key to SideBarMenu">menu_id</span></td>
+                    <td><span class="field-name" data-bs-toggle="popover" title="side_bar_menu_id"
+                            data-bs-content="Foreign key to SideBarMenu">side_bar_menu_id</span></td>
                     <td>FK to SideBarMenu</td>
                 </tr>
                 <tr class="fk-highlight">
