--- a/model_visualized.html
+++ b/model_visualized.html
@@ -1086,7 +1086,7 @@
             </thead>
             <tbody>                
                 <tr>
-                    <td><span class="field-name" data-bs-toggle="popover" title="user_name"
+                    <td><span class="field-name" data-bs-toggle="popover" title="username"
                             data-bs-content="Unique username">username</span></td>
                     <td>String(50)</td>
                 </tr>
