--- a/model_visualized.html
+++ b/model_visualized.html
@@ -1247,8 +1247,8 @@
                     <td>String(255)</td>
                 </tr>
                 <tr>
-                    <td><span class="field-name" data-bs-toggle="popover" title="order"
-                            data-bs-content="Display order">order</span></td>
+                    <td><span class="field-name" data-bs-toggle="popover" title="menu_order"
+                            data-bs-content="Display order">menu_order</span></td>
                     <td>Integer</td>
                 </tr>
             </tbody>
@@ -1279,8 +1279,8 @@
                     <td>String(255)</td>
                 </tr>
                 <tr>
-                    <td><span class="field-name" data-bs-toggle="popover" title="order"
-                            data-bs-content="Display order">order</span></td>
+                    <td><span class="field-name" data-bs-toggle="popover" title="menu_order"
+                            data-bs-content="Display order">menu_order</span></td>
                     <td>Integer</td>
                 </tr>
                 <tr class="fk-highlight">
