--- a/ui/web_ui/pages/locations.html
+++ b/ui/web_ui/pages/locations.html
@@ -4,34 +4,125 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dashboard - Planning System</title>
+    <title>Locations - Planning System</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+    <link rel="stylesheet" href="https://cdn.datatables.net/1.13.6/css/dataTables.bootstrap5.min.css">
+    <link rel="stylesheet" href="https://cdn.datatables.net/buttons/2.4.1/css/buttons.bootstrap5.min.css">
     <link rel="stylesheet" href="../css/template.css">
-    <link rel="stylesheet" href="../css/location.css">
+    <link rel="stylesheet" href="../css/locations.css">
 </head>
 <body>
-    <!-- Page content goes here -->
-    <div class="dashboard-content">
-        <h1>Location</h1>
-        <div class="row">
-            <div class="col-md-6 col-lg-3">
-                <div class="stats-card">
-                    <div class="stats-icon">
-                        <i class="fas fa-tasks"></i>
-                    </div>
-                    <div class="stats-info">
-                        <h3>Total Tasks</h3>
-                        <h2>150</h2>
-                    </div>
+    <div class="locations-content">
+        <div class="card">
+            <div class="card-body">
+                <div class="d-flex justify-content-between mb-3">
+                    <button class="btn btn-primary" id="addLocationBtn">
+                        <i class="fas fa-plus"></i> Add Location
+                    </button>
+                </div>
+                <div class="container-fluid table-container">
+                    <table id="locationsTable" class="table table-striped table-sm" style="width:100%">
+                        <thead>
+                            <tr>
+                                <th>ID</th>
+                                <th>Name</th>
+                                <th>Address</th>
+                                <th>Type</th>
+                                <th>Status</th>
+                                <th>Actions</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <!-- Data will be populated dynamically -->
+                        </tbody>
+                    </table>
                 </div>
             </div>
-            <!-- Add more dashboard content -->
+        </div>
+    </div>
+
+    <!-- Add Location Modal -->
+    <div class="modal fade" id="locationModal" tabindex="-1" aria-labelledby="locationModalLabel" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="locationModalLabel">Add/Edit Location</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                    <form id="locationForm">
+                        <div class="mb-3">
+                            <label for="locationName" class="form-label">Name</label>
+                            <input type="text" class="form-control" id="locationName" required>
+                        </div>
+                        <div class="mb-3">
+                            <label for="locationAddress" class="form-label">Address</label>
+                            <input type="text" class="form-control" id="locationAddress" required>
+                        </div>
+                        <div class="mb-3">
+                            <label for="locationType" class="form-label">Type</label>
+                            <select class="form-select" id="locationType" required>
+                                <option value="Warehouse">Warehouse</option>
+                                <option value="Office">Office</option>
+                                <option value="Retail">Retail</option>
+                            </select>
+                        </div>
+                        <div class="mb-3">
+                            <label for="locationStatus" class="form-label">Status</label>
+                            <select class="form-select" id="locationStatus" required>
+                                <option value="Active">Active</option>
+                                <option value="Inactive">Inactive</option>
+                            </select>
+                        </div>
+                    </form>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                    <button type="button" class="btn btn-primary" id="saveLocationBtn">Save changes</button>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- History Modal -->
+    <div class="modal fade" id="historyModal" tabindex="-1" aria-labelledby="historyModalLabel" aria-hidden="true">
+        <div class="modal-dialog modal-lg">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="historyModalLabel">Location History</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                    <table class="table" id="historyTable">
+                        <thead>
+                            <tr>
+                                <th>Timestamp</th>
+                                <th>Action</th>
+                                <th>Changed By</th>
+                                <th>Details</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <!-- History data will be populated here -->
+                        </tbody>
+                    </table>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                </div>
+            </div>
         </div>
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.7.0.min.js"></script>
+    <script src="https://cdn.datatables.net/1.13.6/js/jquery.dataTables.min.js"></script>
+    <script src="https://cdn.datatables.net/1.13.6/js/dataTables.bootstrap5.min.js"></script>
+    <script src="https://cdn.datatables.net/buttons/2.4.1/js/dataTables.buttons.min.js"></script>
+    <script src="https://cdn.datatables.net/buttons/2.4.1/js/buttons.bootstrap5.min.js"></script>
     <script src="../js/template.js"></script>
+    <script src="../js/locations.js"></script>
     <script>
         // Initialize template
         document.addEventListener('DOMContentLoaded', function() {
@@ -39,4 +130,4 @@
         });
     </script>
 </body>
-</html> 
+</html>
