save some change

--- a/ui/web_ui/pages/location.html
+++ b/ui/web_ui/pages/location.html
@@ -27,7 +27,7 @@
                     </button>
                 </div>
                 <div class="">
-                    <table id="locationsTable" class="stripe row-border order-column nowrap" style="width:100%">
+                    <table id="locationTable" class="stripe row-border order-column nowrap compact" style="width:100%">
                         <thead>
                             <tr>
                                 <th>First name</th>
@@ -690,7 +690,7 @@
     <script>
         // Initialize template
         document.addEventListener('DOMContentLoaded', function() {
-            new DataTable('#locationsTable', {
+            new DataTable('#locationTable', {
                 fixedColumns: {
                     left: 1
                 },
