--- a/model_visualized.html
+++ b/model_visualized.html
@@ -1324,6 +1324,80 @@
         </table>
 
     </div>
+
+    <!-- Material Model -->
+    <table>
+        <thead>
+            <tr>
+                <th colspan="2" style="text-align: center; background-color: #e9ecef; font-size: 1em; padding: 8px;">
+                    Material Model</th>
+            </tr>
+            <tr>
+                <th>Field Name</th>
+                <th>Type</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr class="fk-highlight">
+                <td><span class="field-name" data-bs-toggle="popover" title="part_num_id"
+                        data-bs-content="Foreign key to PartNum">part_num_id</span></td>
+                <td>FK to PartNum</td>
+            </tr>
+            <tr class="fk-highlight">
+                <td><span class="field-name" data-bs-toggle="popover" title="supplier_id"
+                        data-bs-content="Foreign key to Supplier">supplier_id</span></td>
+                <td>FK to Supplier</td>
+            </tr>
+            <tr>
+                <td><span class="field-name" data-bs-toggle="popover" title="material_type"
+                        data-bs-content="Type of material">material_type</span></td>
+                <td>String(50)</td>
+            </tr>
+            <tr>
+                <td><span class="field-name" data-bs-toggle="popover" title="specification"
+                        data-bs-content="Material specifications">specification</span></td>
+                <td>Text</td>
+            </tr>
+        </tbody>
+    </table>
+
+    <!-- SProcMaterial Model -->
+    <table>
+        <thead>
+            <tr>
+                <th colspan="2" style="text-align: center; background-color: #e9ecef; font-size: 1em; padding: 8px;">
+                    SProcMaterial Model</th>
+            </tr>
+            <tr>
+                <th>Field Name</th>
+                <th>Type</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr class="fk-highlight">
+                <td><span class="field-name" data-bs-toggle="popover" title="sub_proc_code_id"
+                        data-bs-content="Foreign key to SubProcCode">sub_proc_code_id</span></td>
+                <td>FK to SubProcCode</td>
+            </tr>
+            <tr class="fk-highlight">
+                <td><span class="field-name" data-bs-toggle="popover" title="material_id"
+                        data-bs-content="Foreign key to Material">material_id</span></td>
+                <td>FK to Material</td>
+            </tr>
+            <tr>
+                <td><span class="field-name" data-bs-toggle="popover" title="quantity"
+                        data-bs-content="Material quantity">quantity</span></td>
+                <td>Float</td>
+            </tr>
+            <tr>
+                <td><span class="field-name" data-bs-toggle="popover" title="unit"
+                        data-bs-content="Measurement unit">unit</span></td>
+                <td>String(20)</td>
+            </tr>
+        </tbody>
+    </table>
+
+    </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <script>
         // Initialize all popovers with hover trigger
